--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -12,8 +12,12 @@
   width: fit-content;
 }
 
-.icon-button > svg {
+.button-icon > svg {
   margin-top: 2.5px;
   font-size: 20px;
   color: rgb(107, 107, 107);
+}
+
+.reorder-wrapper {
+  padding: 12px 0;
 }
