[#3] Add default input to question definition component

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -8,7 +8,7 @@
   text-align: center;
 }
 
-.question-group-repeatable {
+.input-checkbox-wrapper {
   width: fit-content;
 }
 
@@ -20,4 +20,8 @@
 
 .reorder-wrapper {
   padding: 12px 0;
+}
+
+.select-dropdown {
+  text-align: left;
 }
