--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -30,7 +30,28 @@
   margin-bottom: 12px !important;
 }
 
-.button-save-wrapper {
+.space-align-right {
   width: 100%;
   justify-content: end;
+}
+
+.space-align-left {
+  width: 100%;
+  justify-content: start;
+}
+
+.space-vertical-align-left {
+  width: 100%;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.space-vertical-align-right {
+  width: 100%;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.more-question-setting-text {
+  text-align: left;
 }
