[#3] Move save to right pane, form setting toggle, style improvements

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -25,6 +25,9 @@
   padding: 12px;
   background-color: #f3f3f3;
 }
+.reorder-wrapper .reorder-button {
+  background-color: #f3f3f3;
+}
 
 .select-dropdown {
   text-align: left;
