[#14] Load locale dropdown value  & modify translation UI from vertical to horizontal

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -90,6 +90,10 @@
   font-size: 14px !important;
 }
 
+.translation-form-item {
+  margin: 0 !important;
+}
+
 .translation-form-item label {
   width: 100% !important;
 }
