--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -88,6 +88,14 @@
 
 .tags {
   font-size: 14px !important;
+  color: #000;
+}
+.tags svg {
+  color: #000;
+}
+
+.tags-active {
+  border: 2px solid #3590ff !important;
 }
 
 .translation-form-item {
