--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -93,8 +93,10 @@
 .tags {
   font-size: 14px !important;
   color: #000;
+  padding: 5px 10px;
 }
 .tags svg {
+  font-size: 11px;
   color: #000;
 }
 
