--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -137,3 +137,8 @@
 .translation-form-item-card {
   margin-bottom: 10px;
 }
+
+.field-error-wrapper {
+  margin-top: -18px;
+  margin-bottom: 24px;
+}
